--- a/Changes
+++ b/Changes
@@ -113,7 +113,7 @@
 	- Add MANIFEST.SKIP, Changelog.ini, Build.PL, META.json.
 	- Add an FAQ to the docs.
 	- Clean up the docs.
-	- As of this version, maintanence is by Ron Savage.
+	- As of this version, maintenance is by Ron Savage.
 
 2.14 Thu Mar 24 12:00:00 2011
 	- Resolved #63080: module can write multiline values but not read them
